update project content and add cname file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/animsition.min.css">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <!-- Meta Start -->
   <meta property="og:title" content="Jannon Jeffries Portfolio">
@@ -40,8 +41,6 @@
   <meta name="theme-color" content="#ffffff">
   <!-- Favicon End-->
 
-
-  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="home-page">
@@ -154,8 +153,8 @@
           </div>
           <!-- Timeline End -->
         </div>
-        <div class="row">
-            <!-- Festival Start -->
+        <!-- <div class="row">
+            <!-- Festival Start --
             <div class="col-lg-6" data-aos="fade-up">
               <a class="project animsition-link" href="festival.html">
                 <figure>
@@ -170,7 +169,7 @@
               </a>
             </div>
             <!-- Festival End -->
-            <!-- Super Start -->
+            <!-- Super Start --
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <a class="project animsition-link" href="super.html">
                 <figure>
@@ -184,10 +183,10 @@
                 </div>
               </a>
             </div>
-            <!-- Super End -->
-          </div>
-          <div class="row">
-            <!-- Wedding Start -->
+            <!-- Super End --
+          </div> -->
+          <!-- <div class="row">
+            <!-- Wedding Start --
             <div class="col-lg-6" data-aos="fade-up">
               <a class="project animsition-link" href="wedding.html">
                 <figure>
@@ -202,7 +201,7 @@
               </a>
             </div>
             <!-- Wedding End -->
-            <!-- Trans Start -->
+            <!-- Trans Start --
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <a class="project animsition-link" href="trans.html">
                 <figure>
@@ -216,8 +215,8 @@
                 </div>
               </a>
             </div>
-            <!-- Trans End -->
-          </div>
+            <!-- Trans End --
+          </div> -->
           <div class="row">
               <!-- Gift Start -->
               <div class="col-lg-6" data-aos="fade-up">
@@ -234,7 +233,7 @@
                 </a>
               </div>
               <!-- Gift End -->
-              <!-- Chase Start -->
+              <!-- Chase Start --
               <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
                 <a class="project animsition-link" href="chase.html">
                   <figure>
