remove timeline thumb

--- a/index.html
+++ b/index.html
@@ -121,23 +121,23 @@
           </div>
           <!-- March End -->
         </div>
-        <div class="row">
-          <!-- Capital Start  -->
-          <div class="col-lg-6" data-aos="fade-up">
-            <a class="project animsition-link" href="capital.html">
-              <figure>
-                <img src="images/projects/capital/savor_thumb.jpg" alt="Capital One Savor Card Landing Page" class="img-fluid">
-              </figure>
-              <div class="project-hover">
-                <div class="project-hover-inner">
-                  <h2>Capital One Partner Page</h2>
-                  <span>View Project</span>
-                </div>
+        <!-- <div class="row"> -->
+              <!-- Chase Start --
+              <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+                <a class="project animsition-link" href="chase.html">
+                  <figure>
+                    <img src="images/projects/chase/chase_thumb.jpg" alt="Chase Corporate Challenge Shirts" class="img-fluid">
+                  </figure>
+                  <div class="project-hover">
+                    <div class="project-hover-inner">
+                      <h2>Chase Challenge Shirts</h2>
+                      <span>View Project</span>
+                    </div>
+                  </div>
+                </a>
               </div>
-            </a>
-          </div>
-          <!-- Capital End -->
-          <!-- Timeline Start -->
+              <!-- Chase End -->
+          <!-- Timeline Start --
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <a class="project animsition-link" href="timeline.html">
               <figure>
@@ -152,7 +152,7 @@
             </a>
           </div>
           <!-- Timeline End -->
-        </div>
+        <!-- </div> -->
         <!-- <div class="row">
             <!-- Festival Start --
             <div class="col-lg-6" data-aos="fade-up">
@@ -233,21 +233,21 @@
                 </a>
               </div>
               <!-- Gift End -->
-              <!-- Chase Start --
-              <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-                <a class="project animsition-link" href="chase.html">
+              <!-- Capital Start  -->
+              <div class="col-lg-6" data-aos="fade-up">
+                <a class="project animsition-link" href="capital.html">
                   <figure>
-                    <img src="images/projects/chase/chase_thumb.jpg" alt="Chase Corporate Challenge Shirts" class="img-fluid">
+                    <img src="images/projects/capital/savor_thumb.jpg" alt="Capital One Savor Card Landing Page" class="img-fluid">
                   </figure>
                   <div class="project-hover">
                     <div class="project-hover-inner">
-                      <h2>Chase Challenge Shirts</h2>
+                      <h2>Capital One Partner Page</h2>
                       <span>View Project</span>
                     </div>
                   </div>
                 </a>
               </div>
-              <!-- Chase End -->
+            <!-- Capital End -->
             </div>    
       </div>
     </section>
