--- a/capital.html
+++ b/capital.html
@@ -18,7 +18,7 @@
   <meta property="og:title" content="Jannon Jeffries Portfolio">
   <meta property="og:description" content="View the design work of Jannon Jeffries">
   <meta property="og:image" content="images/og-image.jpg">
-  <meta property="og:url" content="???">
+  <meta property="og:url" content="http://jannonjeffries.com/">
   <!-- Meta End -->
 
   <!-- Favicon Start -->
@@ -92,7 +92,7 @@
         <div class="container" data-aos="fade-up">
               <div class="row justify-content-center">
                 <div class="col-lg-10">
-                  <p class="special"><strong>Problem: How do we convey a new partnership to users while also using that same space to prompt users to search our website for event tickets?</strong><br/>
+                  <p class="special"><strong>Problem: How do we convey a new partnership to users while using that same space to prompt users to search our website for event tickets?</strong><br/>
                     Upon securing a partnership with Capital One, my team needed to create a landing page experience to inform users of a new deal associated with a specific Capital One credit card. 
                   </p>
                 </div>
@@ -104,11 +104,11 @@
 
               <div class="row justify-content-center">
                 <div class="col-lg-10">
-                  <p>Although this page’s main focus was to highlight our new partnership, we still needed to utilize the page to help push our brand and mission. To help maintain such a balance between these two goals we incorporated our brand styles&mdash; button colors, hero styles etc.&mdash; and elements from Capital One&mdash; their logo, content and copy&mdash; to transform two brands into a single cohesive experience.</p>
+                  <p>Although this page's main focus was to highlight our new partnership, we still needed to utilize the page to help push our brand and mission. To help maintain such a balance between these two goals, we incorporated our brand styles&mdash; button colors, hero styles etc.&mdash; and elements from Capital One&mdash; their logo, content and copy&mdash; to transform two brands into a single cohesive experience.</p>
                   <div class="spacer"></div>
                   <p class="text-center "><img src="images/projects/capital/savor-2_desktop.jpg" alt="Capital One Landing Page" class="img-fluid"></p>
                   <div class="spacer"></div>
-                  <p>While the top of page highlights the partnership with the logo lock-up and introduction information, the bottom of the page calls attention to finding live event tickets. We included a search bar in the middle of the page so that after users read about the new offer they can start searching immediately for appealing events. We also added an image grid of current popular events in case the user needed help discovering a worthwhile event to attend.</p>
+                  <p>While the top of page highlights the partnership with the logo lock&ndash;up and introduction information, the bottom of the page calls attention to finding live event tickets. We included a search bar in the middle of the page so that after users read about the new offer they can start searching immediately for appealing events. We also added an image grid of current popular events in case the user needs help discovering a worthwhile event to attend.</p>
                   <div class="spacer"></div>
                   <p class="text-center "><img src="images/projects/capital/savor_mobile.jpg" alt="Capital One Mobile Experience" class="img-fluid"></p>
                   <div class="spacer"></div>
