--- a/cupcake.html
+++ b/cupcake.html
@@ -18,7 +18,7 @@
   <meta property="og:title" content="Jannon Jeffries Portfolio">
   <meta property="og:description" content="View the design work of Jannon Jeffries">
   <meta property="og:image" content="images/og-image.jpg">
-  <meta property="og:url" content="???">
+  <meta property="og:url" content="http://jannonjeffries.com/">
   <!-- Meta End -->
 
   <!-- Favicon Start -->
@@ -94,25 +94,25 @@
 
               <div class="row justify-content-center">
                 <div class="col-lg-10">
-                  <p class="special"><strong>Problem: Use skills learned from the General Assembly Frontend Developtment Course to create a wesite.</strong></p>
+                  <p class="special"><strong>Problem: How do I use HTML/CSS and JavaScript learned from a frontend development course to create a website?</strong></p>
                   <p class="special">Other students used this opportunity to develop portfolio websites; however, I wanted to create a more engaging experience for users.</p>
                 </div>
               </div>
               <div class="row justify-content-center">
                 <div class="col-lg-10">
                   <div class="spacer"></div>
-                  <p class="text-center">
-                      <video class="cupcake-how-to" controls autoplay>
-                        <source alt="Creating a cupcake" src="images/projects/cupcake/cupcake-1_desktop.mov" type="video/mp4">
-                        <source src="movie.ogg" type="video/ogg">
-                        Your browser does not support the video tag.
-                      </video>
-                  </p>
+                      <p class="text-center "><img src="images/projects/cupcake/cupcake-1_desktop.jpg" alt="Cupcake Creator on desktop" class="img-fluid"></p>
                   <div class="spacer"></div>
-                  <p>I decided to design a cupcake creator that users could interact with to create their own unique cupcakes. This required not only frontend development skills, but also graphic design and UX skills as well.</p>
-                  <p class="text-center "><img src="images/projects/cupcake/cupcake-1_desktop.jpg" alt="Cupcake Creator on desktop" class="img-fluid"></p>
-                  <p>First, the user selects a color from a color picker and then chooses what part of the cupcake to alter. Next, the user clicks to add different accessories to her now colorized cupcake. And voila! The user has created a fun new friend.</p>
-                  <p>Though there was no formal UX testing for my page, I did have some friends test it out and took note of their behaviors. One major issue I ran into was users not utilizing the arrows to move from screen to screen, but rather scrolling (espeically on mobile devices). In order to get the user to interact with the arrows, I used javascript to disable scrolling on the pages. Unfortunately, this may have not been the best solution since a user's natural instinct on their mobile devices is to scroll, but with the time constraints and the way my javascript worked, I needed the user to interact with the arrows in order to call the next steps in the creator.</p>
+                  <p>I decided to design a cupcake creator that users could interact with to make their own unique cupcakes. This required not only frontend development skills, but also graphic design and user experience knowledge as well.</p>
+                  <p class="text-center">  
+                    <video class="cupcake-how-to" controls autoplay>
+                      <source alt="Creating a cupcake" src="images/projects/cupcake/cupcake-1_desktop.mov" type="video/mp4">
+                      <source src="movie.ogg" type="video/ogg">
+                      Your browser does not support the video tag.
+                    </video>
+                  </p>
+                  <p>The interaction to create a cupcake is simple. First the user selects a color from a color picker and then chooses what part of the cupcake to alter. Next, users click to add different accessories to their now colorized cupcakes. And voila! The user has created a fun new friend.</p>
+                  <p>Though there was no formal UX testing for my page, I did have some friends test it out and took note of their behaviors. One major issue I ran into was users not utilizing the arrows to move from screen to screen, but rather scrolling (espeically on mobile devices). In order to get the user to interact with the arrows, I used JavaScript to disable scrolling on the pages. Unfortunately, this may have not been the best solution since a user's natural instinct on their mobile devices is to scroll, but with the time constraints and the way my JavaScript worked, I needed the user to interact with the arrows in order to trigger the next screen in the creator.</p>
                   <p class="text-center "><img src="images/projects/cupcake/cupcake-1_mobile.jpg" alt="Cupcake Creator on mobile device" class="img-fluid"></p>
                 </div>
               </div>
