--- a/gift.html
+++ b/gift.html
@@ -18,7 +18,7 @@
   <meta property="og:title" content="Jannon Jeffries Portfolio">
   <meta property="og:description" content="View the design work of Jannon Jeffries">
   <meta property="og:image" content="images/og-image.jpg">
-  <meta property="og:url" content="???">
+  <meta property="og:url" content="http://jannonjeffries.com/">
   <!-- Meta End -->
 
   <!-- Favicon Start -->
