--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta property="og:title" content="Jannon Jeffries Portfolio">
   <meta property="og:description" content="View the design work of Jannon Jeffries">
   <meta property="og:image" content="images/og-image.jpg">
-  <meta property="og:url" content="???">
+  <meta property="og:url" content="http://jannonjeffries.com/">
   <!-- Meta End -->
 
   <!-- Favicon Start -->
@@ -121,55 +121,55 @@
           </div>
           <!-- March End -->
         </div>
-        <!-- <div class="row"> -->
-              <!-- Chase Start --
-              <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-                <a class="project animsition-link" href="chase.html">
-                  <figure>
-                    <img src="images/projects/chase/chase_thumb.jpg" alt="Chase Corporate Challenge Shirts" class="img-fluid">
-                  </figure>
-                  <div class="project-hover">
-                    <div class="project-hover-inner">
-                      <h2>Chase Challenge Shirts</h2>
-                      <span>View Project</span>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <!-- Chase End -->
-          <!-- Timeline Start --
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <a class="project animsition-link" href="timeline.html">
+        <div class="row">
+          <!-- Capital Start  -->
+          <div class="col-lg-6" data-aos="fade-up">
+            <a class="project animsition-link" href="capital.html">
               <figure>
-                <img src="images/projects/timeline/timeline_thumb.jpg" alt="Vivid Seats Timeline Wall" class="img-fluid">
+                <img src="images/projects/capital/savor_thumb.jpg" alt="Capital One Savor Card Landing Page" class="img-fluid">
               </figure>
               <div class="project-hover">
                 <div class="project-hover-inner">
-                  <h2>Timeline Wall</h2>
+                  <h2>Capital One Partner Page</h2>
                   <span>View Project</span>
                 </div>
               </div>
             </a>
           </div>
-          <!-- Timeline End -->
-        <!-- </div> -->
-        <!-- <div class="row">
-            <!-- Festival Start --
-            <div class="col-lg-6" data-aos="fade-up">
-              <a class="project animsition-link" href="festival.html">
+          <!-- Capital End -->
+          <!-- Gift Start -->
+          <div class="col-lg-6" data-aos="fade-up">
+              <a class="project animsition-link" href="gift.html">
                 <figure>
-                  <img src="images/projects/festival/festivals-thumb.gif" alt="Festival Page Animation" class="img-fluid">
+                  <img src="images/projects/gift/gift-card_thumb.jpg" alt="Gift Card Page Redesign" class="img-fluid">
                 </figure>
                 <div class="project-hover">
                   <div class="project-hover-inner">
-                    <h2>Festival Page Animations</h2>
+                    <h2>Gift Card Page Redesign</h2>
                     <span>View Project</span>
                   </div>
                 </div>
               </a>
             </div>
-            <!-- Festival End -->
-            <!-- Super Start --
+            <!-- Gift End -->
+        </div>
+        <div class="row">
+          <!-- Mapbox Start -->
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+              <a class="project animsition-link" href="mapbox.html">
+                <figure>
+                  <img src="images/projects/mapbox/mapbox_thumb.jpg" alt="Mapbox MLB Map" class="img-fluid">
+                </figure>
+                <div class="project-hover">
+                  <div class="project-hover-inner">
+                    <h2>MLB Mapbox Map</h2>
+                    <span>View Project</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <!-- Mapbox End -->
+            <!-- Super Start -->
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <a class="project animsition-link" href="super.html">
                 <figure>
@@ -183,10 +183,10 @@
                 </div>
               </a>
             </div>
-            <!-- Super End --
+            <!-- Super End -->
           </div> -->
-          <!-- <div class="row">
-            <!-- Wedding Start --
+          <div class="row">
+            <!-- Wedding Start -->
             <div class="col-lg-6" data-aos="fade-up">
               <a class="project animsition-link" href="wedding.html">
                 <figure>
@@ -201,7 +201,7 @@
               </a>
             </div>
             <!-- Wedding End -->
-            <!-- Trans Start --
+            <!-- Trans Start -->
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <a class="project animsition-link" href="trans.html">
                 <figure>
@@ -215,39 +215,39 @@
                 </div>
               </a>
             </div>
-            <!-- Trans End --
-          </div> -->
+            <!-- Trans End -->
+          </div>
           <div class="row">
-              <!-- Gift Start -->
-              <div class="col-lg-6" data-aos="fade-up">
-                <a class="project animsition-link" href="gift.html">
+            <!-- Timeline Start -->
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+              <a class="project animsition-link" href="timeline.html">
+                <figure>
+                  <img src="images/projects/timeline/timeline_thumb.jpg" alt="Vivid Seats Timeline Wall" class="img-fluid">
+                </figure>
+                <div class="project-hover">
+                  <div class="project-hover-inner">
+                    <h2>Timeline Wall</h2>
+                    <span>View Project</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <!-- Timeline End -->
+            <!-- Festival Start -->
+            <div class="col-lg-6" data-aos="fade-up">
+                <a class="project animsition-link" href="festival.html">
                   <figure>
-                    <img src="images/projects/gift/gift-card_thumb.jpg" alt="Gift Card Page Redesign" class="img-fluid">
+                    <img src="images/projects/festival/festivals-thumb.gif" alt="Festival Page Animation" class="img-fluid">
                   </figure>
                   <div class="project-hover">
                     <div class="project-hover-inner">
-                      <h2>Gift Card Page Redesign</h2>
+                      <h2>Festival Page Animations</h2>
                       <span>View Project</span>
                     </div>
                   </div>
                 </a>
               </div>
-              <!-- Gift End -->
-              <!-- Capital Start  -->
-              <div class="col-lg-6" data-aos="fade-up">
-                <a class="project animsition-link" href="capital.html">
-                  <figure>
-                    <img src="images/projects/capital/savor_thumb.jpg" alt="Capital One Savor Card Landing Page" class="img-fluid">
-                  </figure>
-                  <div class="project-hover">
-                    <div class="project-hover-inner">
-                      <h2>Capital One Partner Page</h2>
-                      <span>View Project</span>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            <!-- Capital End -->
+              <!-- Festival End -->
             </div>    
       </div>
     </section>
