--- a/march.html
+++ b/march.html
@@ -18,7 +18,7 @@
   <meta property="og:title" content="Jannon Jeffries Portfolio">
   <meta property="og:description" content="View the design work of Jannon Jeffries">
   <meta property="og:image" content="images/og-image.jpg">
-  <meta property="og:url" content="???">
+  <meta property="og:url" content="http://jannonjeffries.com/">
   <!-- Meta End -->
 
   <!-- Favicon Start -->
@@ -93,22 +93,20 @@
               <div class="row justify-content-center">
                 <div class="col-lg-10">
                   <p class="special"><strong>Problem: How do we get users excited about buying March Madness tickets?</strong><br/>
-                    My team wanted to create a fun experience for our users that would also make the ticket buying process more seamless.
+                    My team wanted to create an enjoyable experience for our users that would also make the ticket buying process more seamless.
                   </p>
                 </div>
               </div>
-
               <div class="spacer"></div>
               <p class="text-center"><img src="images/projects/march/mm-1_desktop.jpg" alt="March Madness Landing Page" class="img-fluid"></p>
               <div class="spacer"></div>
-
               <div class="row justify-content-center">
                 <div class="col-lg-10">
-                  <p>After researching March Madness designs, we settled on a bracket concept. Anyone interested in March Madness tickets has probably filled out a bracket before in hopes of their team making it to the final round. By using a bracket design, we hoped to connect more with the fans during their ticket buying experience.</p>
-                  <p>The bracket itself is interactive. It acts as a filtering system, so the user can filter by the tournament rounds he/she wishes to buy tickets for. Another purpose of the bracket is to be informational for basketball fans. Finding out the location of each tournament round can be difficult thanks to the numerous tournament schedule websites with bad UI. Therefore, we wanted to include the round locations in the bracket to help our users easily obtain that information as a part of the ticket buying flow.</p>
-                  <p>One thing we had to be mindful of was how to treat the experience as March Madness progressed. Therefore, we created different states of the page as the tournament advanced.</p>
+                  <p>After researching March Madness designs, we settled on a bracket concept. Anyone interested in March Madness tickets has probably filled out a bracket before in hopes of their team making it to the final round. By using a bracket design, we hoped to connect more with fans during their ticket buying experience.</p>
+                  <p>The bracket itself is interactive. It acts as a filtering system, so users can filter by the tournament rounds they wishes to buy tickets for. Another purpose of the bracket is to be informational for basketball fans. Finding out the location of each tournament round can be difficult thanks to the numerous tournament schedule websites with bad user interface. Therefore, we chose to include the round locations in our bracket to help our users easily obtain that information as a part of the ticket buying flow.</p>
+                  <p>We also had to create a slightly different experience as the March Madness tournament progressed. We didn't want users confused and trying to interact with the filter buttons of past rounds, so we disabled specific buttons (with styles and functionality) depending on the advancement of the tournament.</p>
                   <p class="text-center "><img src="images/projects/march/mm-2_desktop.jpg" alt="March Madness Landing Page" class="img-fluid"></p>
-                  <p>An issue that arose when designing this page had to do with the mobile experience. At first, we wanted to treat the mobile and desktop experiences the same; however, the dimensions for mobile made that difficult. After brainstorming and sketching, we developed a mobile version of the bracket that moves vertically rather than horizontally. This stays true to the bracket concept while proving easier for users to interact with on a mobile device.</p>
+                  <p>One issue that arose when designing this page had to do with the mobile experience. At first, we wanted to treat the mobile and desktop experiences uniformly; however, the dimensions for mobile devices made that difficult. After brainstorming and sketching out wireframes, we developed a mobile version of the bracket that moves vertically rather than horizontally. This stays true to the bracket concept while proving easier for users to interact with on a mobile device.</p>
                   <div class="spacer"></div>
                   <p class="text-center "><img src="images/projects/march/mm-3_desktop.jpg" alt="March Madness Landing Page" class="img-fluid"></p>
                   <div class="spacer"></div>
@@ -116,7 +114,7 @@
               </div>
               <div class="row align-items-center justify-content-center">
                 <div class="col-lg-6 col-sm-12">
-                    <p>While testing the mobile implementation, another issue arose. Users did not see the result of interacting with the bracket without scrolling down. This was definitely problematic, so we added a smooth jump scroll to the bracket filter buttons. When a user clicks on the button, he/she is scrolled down to the appropriate event listings. Then when a user wants to choose a different round to filter by, there is a “view all” button the user can click on to scroll back up to the bracket view.</p>
+                    <p>While testing the mobile implementation, another issue arose. Users did not see the filtered results of interacting with the bracket without scrolling down. This was definitely problematic, so we decided to add a smooth jump scroll to the bracket filter buttons. When users click a button, they are scrolled down to the appropriate event listings. Then when a user wants to choose a different round to filter by, there is a “view all” button the user can click on to scroll back up to the bracket view.</p>
                 </div>
                 <div class="col-lg-4 col-sm-12">
                     <p class="text-center "><img src="images/projects/march/mm-2_mobile.gif" alt="March Madness Mobile Experience" class="img-fluid"></p>
