--- a/timeline.html
+++ b/timeline.html
@@ -18,7 +18,7 @@
   <meta property="og:title" content="Jannon Jeffries Portfolio">
   <meta property="og:description" content="View the design work of Jannon Jeffries">
   <meta property="og:image" content="images/og-image.jpg">
-  <meta property="og:url" content="???">
+  <meta property="og:url" content="http://jannonjeffries.com/">
   <!-- Meta End -->
 
   <!-- Favicon Start -->
@@ -93,7 +93,7 @@
               <div class="row justify-content-center">
                 <div class="col-lg-10">
                   <p class="special"><strong>Problem: How do we get prospective candiates excited about working at Vivid Seats?</strong><br/>
-                    Vivid Seats desired an art installation that would liven up the office space as well as illustrate the <i>vivid</i> history of the company.
+                    Vivid Seats desired an art installation that would liven up the office space as well as illustrate the <em>vivid</em> history of the company.
                   </p>
                 </div>
               </div>
@@ -101,19 +101,18 @@
               <div class="spacer"></div>
               <p class="text-center"><img src="images/projects/timeline/timeline-1.jpg" alt="Vivid Seats Timeline" class="img-fluid"></p>
               <div class="spacer"></div>
-
               <div class="row justify-content-center">
                 <div class="col-lg-10">
-                  <p>This project began with exploring possible canvases in the office. After creating mock-ups for a few options, we settled on a long hallway that potentional candiates would be taken down on their way for interviews. Today, I often see recruiters stopping at the timeline to elaborate on the timeline and the events that have made Vivid Seats the company it is today.</p>
+                  <p>This project began with exploring possible canvases in the office. After creating mock-ups for a few options, we settled on a long hallway that potentional candiates would be taken down on their way for interviews.</p>
                   <p class="text-center "><img src="images/projects/timeline/timeline-2.jpg" alt="Vivid Seats Timeline" class="img-fluid"></p>
-                  <p>After the canvas was chosen, there was a lot of design exploration, measuring and searching for the best vendors. The design itself was inspired...</p>
+                  <p>The design itself draws a lot of inspiration from Vivid Seats employees. The background of the timeline is a collage of employee photographs&mdash; many of which were taken at live events. Also included on the timline are the company's past logos, which were initally the inspiration for the entire project.</p>
                   <div class="spacer"></div>
                   <p class="text-center "><img src="images/projects/timeline/timeline-3.jpg" alt="Vivid Seats Timeline" class="img-fluid"></p>
+                  <p>Today, I often see recruiters stopping at the timeline to elaborate on the installation and the events that have made Vivid Seats the company it is today.</p>
                   <div class="spacer"></div>
                 </div>
               </div>
         </div>
-
       </section>
   
    <!-- End Project -->
