Updates a few typos; changes formatting on cupcake page for consistency

--- a/cupcake.html
+++ b/cupcake.html
@@ -86,16 +86,17 @@
         </div>
       </section>
       <!-- END templateux-hero -->
-      
-      
+      <div class="spacer"></div>
+      <div class="spacer"></div>
       <section class="templateux-portfolio-overlap">
 
         <div class="container" data-aos="fade-up">
 
               <div class="row justify-content-center">
                 <div class="col-lg-10">
-                  <p class="special"><strong>Problem: How do I use HTML/CSS and JavaScript learned from a frontend development course to create a website?</strong></p>
-                  <p class="special">Other students used this opportunity to develop portfolio websites; however, I wanted to create a more engaging experience for users.</p>
+                  <p class="special"><strong>Problem: How do I use HTML/CSS and JavaScript learned from a frontend development course to create a website?</strong><br/>
+                  Other students used this opportunity to develop portfolio websites; however, I wanted to create a more engaging experience for users.
+                  </p>
                 </div>
               </div>
               <div class="row justify-content-center">
