--- a/festival.html
+++ b/festival.html
@@ -92,7 +92,7 @@
         <div class="container" data-aos="fade-up">
               <div class="row justify-content-center">
                 <div class="col-lg-10">
-                  <p class="special"><strong>With the music festival season approaching, how can we redesign our festival landing page to inspire users to buy tickets?</strong><br/>
+                  <p class="special"><strong>Problem: With the music festival season approaching, how can we redesign our festival landing page to inspire users to buy tickets?</strong><br/>
                     To liven up our experience for users, my team started updating event category pages that received the most traffic&mdash;starting with the music festival landing page.
                   </p>
                 </div>
