--- a/mapbox.html
+++ b/mapbox.html
@@ -92,7 +92,7 @@
         <div class="container" data-aos="fade-up">
               <div class="row justify-content-center">
                 <div class="col-lg-10">
-                  <p class="special"><strong>How can we showcase which MLB teams are favored in various locations in the United States?</strong><br/>
+                  <p class="special"><strong>Problem: How can we showcase which MLB teams are favored in various locations in the United States?</strong><br/>
                     With baseball's opening day fast approaching, our SEO team thought it would be interesting to show our users who the most popular MLB teams are in their counties.</p>
                 </div>
               </div>
