--- a/super.html
+++ b/super.html
@@ -92,7 +92,7 @@
         <div class="container" data-aos="fade-up">
               <div class="row justify-content-center">
                 <div class="col-lg-10">
-                  <p class="special"><strong>How do we showcase Super Bowl pricing information in an interesting way for our users?</strong><br/>
+                  <p class="special"><strong>Problem: How do we showcase Super Bowl pricing information in an interesting way for our users?</strong><br/>
                     Our company recently started experimenting with data visualization technologies. So in honor of the Super Bowl, we utilized data visualization to inform our users of the ever&ndash;changing Super Bowl prices.
                   </p>
                 </div>
@@ -107,7 +107,7 @@
                   <div class="spacer"></div>
                   <p class="text-center "><img src="images/projects/super/sb-2_desktop.jpg" alt="Super Bowl Landing Page" class="img-fluid"></p>
                   <div class="spacer"></div>
-                  <p>Lastly, we made sure to include multiple calls to action for the users. Before, many of our SEO landing experiences would be completely isolated from our overall company goal&mdash;helping fans to experience live events. We have learned that a lot of individuals interested in information like Super Bowl ticket prices (and other tickets related data) are also interested in attending such live events. Therefore, by providing the user with a direct gateway to tickets from these kinds of pages, we give the user more opportunities to seek out their favorite teams, artists and shows.</p>
+                  <p>Lastly, we made sure to include multiple calls to action for the users. Before, many of our SEO landing experiences would be completely isolated from our overall company goal&mdash;helping fans to experience live events. We have learned that a lot of individuals interested in information like Super Bowl ticket prices (and other ticket-related data) are also interested in attending such live events. Therefore, by providing the user with a direct gateway to tickets from these kinds of pages, we give the user more opportunities to seek out their favorite teams, artists and shows.</p>
                 </div>
               </div>
               <div class="spacer"></div>
