--- a/wedding.html
+++ b/wedding.html
@@ -107,7 +107,7 @@
                   <p class="text-center "><img src="images/projects/wedding/wedding-2.jpg" alt="Wedding Invitations" class="img-fluid"></p>
                   <div class="spacer"></div>
                   <p>One particular part of the process where I took into account user experience involved the structure of the wedding invitations. Most wedding invitations require an envelope, invitation, RSVP envelope and RSVP invitation. This seems excessive not only for waste purposes, but also for the guests when it comes to sending in their RSVPs. My approach combined the wedding invitation and envelope into one unit including the RSVP tucked inside as a postcard with postage. This way, there would be less waste and guests would simply need to fill out the RSVP and stick it into the mailbox.</p>
-                  <p>I also decided to include a simplifed map with directions from the ceremony to the reception location. A lot of the guests would be relatives and might not have access to a smart phone or gps, so this addition seemed like it would make it easier on the wedding guests.</p>
+                  <p>I also decided to include a simplifed map with directions from the ceremony to the reception location. A lot of the guests would be relatives and might not have access to a smart phone or GPS, so this addition seemed like it would make it easier on the wedding guests.</p>
                   <div class="spacer"></div>
                   <p class="text-center "><img src="images/projects/wedding/wedding-3.jpg" alt="Wedding Invitations" class="img-fluid"></p>
                   <div class="spacer"></div>
