--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
               </a>
             </div>
             <!-- Super End -->
-          </div> -->
+          </div>
           <div class="row">
             <!-- Wedding Start -->
             <div class="col-lg-6" data-aos="fade-up">
